@@ -4,7 +4,8 @@ use warnings;
 
 # Modules.
 use Tie::Hash::Check;
-use Test::More 'tests' => 3;
+use Test::More 'tests' => 4;
+use Test::NoWarnings;
 
 # Test.
 tie my %hash, 'Tie::Hash::Check', {
