@@ -1,5 +1,6 @@
 0.02
  - Add tests for TIEHASH.
+ - Add tests for Test::NoWarnings.
 
 0.01 2014-11-27T20:00:34+01:00
  - First version.
